# rubble-demo-nrf51

./: .gdbinit  Cargo.toml  memory.x
src/: logger.rs  main.rs
