[package]
name = "rubble-demo-nrf51"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
rubble = { git = "https://github.com/chocol4te/rubble", rev = "1c9fce0", features = ["thumbv6", "log"] }
rubble-nrf51 = { git = "https://github.com/chocol4te/rubble", rev = "1c9fce0" }
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.4.3"
cortex-m-rt = "0.6.8"
byteorder = { version = "1.3.2", default-features = false }
panic-semihosting = "0.5.2"
bbqueue = { git = "https://github.com/chocol4te/bbqueue", rev = "a4eec6f", features = ["cortex-m"] }
nrf51-hal = "0.6.2"
log = { git = "https://github.com/rust-lang-nursery/log", rev = "8dbb2f5", features = ["release_max_level_trace", "max_level_trace"] }
