[package]
name = "rubble-demo-nrf51"
description = "Rubble BLE stack demo for nRF51822"
categories = ["embedded", "no-std"]
keywords = ["arm", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rubble = { path = "/Users/ferdiamckeogh/Desktop/rubble/rubble", features = ["thumbv6", "log"] }
rubble-nrf51 = { path = "/Users/ferdiamckeogh/Desktop/rubble/rubble-nrf51" }
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.4.3"
cortex-m-rt = "0.6.8"
byteorder = { version = "1.3.2", default-features = false }
panic-semihosting = "0.5.2"
bbqueue = { git = "https://github.com/chocol4te/bbqueue", rev = "9126df3", features = ["cortex-m"] }
nrf51-hal = "0.6.2"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = "s"
debug = true
lto = true
codegen-units = 1
